cmake_minimum_required(VERSION 3.16)
project(maze)
set(CMAKE_c_STANDARD 17)

find_package(SDL2 REQUIRED)
include_directories(${SDL2_INCLUDE_DIRS})
file(GLOB SOURCES "src/*.c")
file(GLOB HEADERS "inc/*.cc")
add_executable(maze maze.c ${SOURCES} ${HEADERS})
target_link_libraries(maze ${SDL2_LIBRARIES})
